<resources>
    <string name="app_name">KMessage</string>
    <string name="toast_message_text_sd_card_not_available">SD-Card not available</string>
    <string name="toast_message_text_permission_write_not_available">The app was not allowed permission to write SD-Card</string>

    <!-- Navigation Menu -->
    <string name="nav_menu_profile">Profile</string>
    <string name="nav_menu_news">News</string>
    <string name="nav_menu_messages">Messages</string>
    <string name="nav_sub_more">More</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_about">About us</string>
    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>
    <string name="nav_menu_subscribers">Subscribers</string>
    <string name="nav_menu_groups">Groups</string>
    <string name="nav_menu_photos">Photo</string>
    <string name="nav_menu_music">Music</string>
    <string name="nav_menu_videos">Videos</string>
    <string name="nav_menu_favourites">Favourites</string>
    <string name="nav_menu_search">Search</string>
    <string name="nav_header_text_title">Arkanov Sergey</string>
    <string name="nav_header_text_mail">arkanov-sergey@gmail.com</string>
    <!-- / -->

    <!-- Profile Activity -->
    <string name="title_activity_profile">Profile</string>
    <string name="action_new_note">New Note</string>
    <string name="action_search">Search</string>
    <string name="button_text_photo">Photos</string>
    <string name="button_text_video">Video</string>
    <string name="button_text_music">Music</string>
    <string name="button_text_friends">Friends</string>
    <string name="button_text_subscribers">Subscribers</string>
    <string name="button_text_wall">Wall</string>
    <string name="button_text_groups">Groups</string>
    <string name="button_text_documents">Documents</string>
    <string name="button_text_favourites">Favourites</string>
    <string name="button_text_notes">Notes</string>
    <string name="button_text_games">Games</string>
    <string name="button_text_more">More</string>
    <string name="button_text_online">Online</string>
    <string name="button_text_exit">Exit</string>
    <string name="profile_activity_text_title">Arkanov Sergey</string>
    <string name="profile_activity_text">id: 311239708\ne-mail: arkanov-sergey@gmail.ru</string>
    <string name="profile_activity_text_location">Russia, Moscow</string>
    <!-- / -->

    <!-- Messages Activity -->
    <string name="title_activity_messages">Messages</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <!-- / -->

    <!-- FileDialog Activity -->
    <string name="alert_dialog_delete">Delete…</string>
    <string name="alert_dialog_delete_checked_elements">Would you like delete checked elements?</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
    <string name="title_activity_file_dialog">FileDialog</string>
    <string name="location">Path</string>
    <string name="cant_read_folder">Can not open the directory</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="no_data">No data</string>
    <color name="gray">#ffff0000</color>
    <string name="nnew_save">Save as…</string>
    <string name="select_save">Replace</string>
    <string name="create_save">Save</string>
    <string name="select_open">Open</string>
    <string name="create_open">Save</string>
    <string name="nav_menu_friends">Friends</string>
    <!-- / -->

    <!-- FriendsActivity -->
    <string name="title_activity_friends">Friends</string>
    <string name="action_new_friends">New Friend</string>
    <string name="tab_item_all_friends">All Friends</string>
    <string name="tab_item_on_line_friends">Online</string>
    <!-- / -->

    <!-- Settings Activity -->
    <string name="title_activity_settings">Settings</string>
    <string name="button_text_language">Language</string>
    <string name="button_text_notifications">Notifications</string>
    <string name="button_text_common">Common</string>
    <string name="button_text_confidential">Confidential</string>
    <string name="button_text_account">Account</string>
    <string name="button_text_reset">Reset</string>
    <string name="text_view_about">About</string>
    <string name="button_text_about_us">About us</string>
    <string name="button_text_write_author">Write author</string>
    <string name="text_view_settings">Settings</string>

    <string name="button_text_clear_cache">Clear cache images</string>
    <string name="button_text_memory">Display size application</string>
    <string name="button_text_theme">Application theme</string>
    <array name="alert_dialog_common_settings_menu_items">
        <item>Purple</item>
        <item>Red</item>
        <item>Deep Purple</item>
        <item>Indigo</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Deep Orange</item>
    </array>
    <string name="alert_dialog_toast_restart_application">Restart application.</string>
    <string name="button_text_full_screen">Full-screen application</string>
    <!-- / -->

    <!-- AboutActivity -->
    <string name="title_activity_about_us">About us</string>
    <string name="text_view_version">Version 1.01.123</string>
    <string name="text_view_author">© 2016 Rakov Kirill.</string>
    <string name="text_view_rights_reserved">All rights reserved.</string>
    <!-- / -->

    <!-- SearchActivity -->
    <string name="title_activity_search">Search</string>
    <string name="search_hint">Search</string>
    <string name="alert_dialog_title_type_search">What to look for?</string>
    <array name="alert_dialog_search_menu_items">
        <item>Search Friends</item>
        <item>Search Music</item>
        <item>Search Videos</item>
        <item>Search Groups</item>
        <item>Search Messages</item>
    </array>
    <!-- / -->

    <!-- PhotoActivity -->
    <string name="title_activity_photo">Photo</string>
    <string name="tab_item_all_photos">All Photos</string>
    <string name="tab_item_albums">Albums</string>
    <string name="title_activity_page_image">Gallery</string>
    <string name="descr_image">Image</string>
    <string name="title_activity_common_settings">Common</string>
    <string name="text_view_cache">Cache</string>
    <string name="title_activity_new_note">NewNoteActivity</string>
    <string name="title_activity_new_message">NewMessageActivity</string>
    <string name="title_activity_new_friend">NewFriendActivity</string>
    <!-- / -->

    <string name="title_activity_subscribers">Subscribers</string>
    <string name="title_activity_music">Music</string>
    <string name="title_activity_groups">Groups</string>
    <string name="title_activity_video">Video</string>
    <string name="title_activity_favourites">Favorites</string>
    <string name="title_activity_documents">Documents</string>
    <string name="title_activity_notes">Notes</string>
    <string name="title_activity_more">More</string>
    <string name="title_activity_wall">Wall</string>
    <string name="text_view_view">View</string>
    <string name="title_activity_game">GameActivity</string>
</resources>
