<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:divider="@drawable/separator"
                android:dividerPadding="6dp"
                android:showDividers="middle">

                <Button
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:text="@string/button_text_more"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_arrange_bring_forward"
                    android:id="@+id/button_more"
                    android:onClick="buttonsClickListener"/>

                <Button
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:text="@string/button_text_online"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:id="@+id/button_on_line"
                    android:onClick="buttonsClickListener"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:adjustViewBounds="true"
                android:divider="@drawable/separator"
                android:dividerPadding="6dp"
                android:showDividers="middle">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_music"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_music_box"
                    android:id="@+id/button_music"
                    android:onClick="buttonsClickListener"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:divider="@drawable/separator"
                    android:showDividers="middle">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_text_friends"
                        android:gravity="center"
                        android:drawableTop="@drawable/ic_account_star_variant"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:id="@+id/button_friends"
                        android:onClick="buttonsClickListener"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_text_subscribers"
                        android:gravity="center"
                        android:drawableTop="@drawable/ic_account_plus"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:id="@+id/button_subscribers"
                        android:onClick="buttonsClickListener"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:divider="@drawable/separator"
                    android:showDividers="middle">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_text_wall"
                        android:gravity="center"
                        android:drawableTop="@drawable/ic_google_wallet"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:id="@+id/button_wall"
                        android:onClick="buttonsClickListener"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_text_groups"
                        android:gravity="center"
                        android:drawableTop="@drawable/ic_account_multiple"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:id="@+id/button_groups"
                        android:onClick="buttonsClickListener"/>
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_photo"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_image"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/button_photos"
                    android:onClick="buttonsClickListener"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_video"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_filmstrip"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/button_videos"
                    android:onClick="buttonsClickListener"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_documents"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_file_document_box"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/button_documents"
                    android:onClick="buttonsClickListener"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_favourites"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_bookmark"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/button_favourites"
                    android:onClick="buttonsClickListener"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_notes"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_note"
                    android:layout_gravity="start"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/button_notes"
                    android:onClick="buttonsClickListener"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_games"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_gamepad_variant"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/button_games"
                    android:onClick="buttonsClickListener"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_activity_text_title"
                    style="@android:style/TextAppearance.Medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_activity_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_activity_text_location" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_exit"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/button_exit_profile" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>