<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:divider="@drawable/separator"
                android:showDividers="middle">
                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="112dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:src="@drawable/profile"
                        app:border_color="#FF000000"
                        android:layout_marginLeft="24dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_activity_text_title"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:gravity="left"
                        android:paddingBottom="4dp"
                        android:id="@+id/username"
                        android:layout_centerVertical="true"
                        android:layout_alignLeft="@+id/email"
                        android:layout_alignStart="@+id/email" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nav_header_text_mail"
                        android:id="@+id/email"
                        android:gravity="left"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:layout_below="@+id/username"
                        android:layout_toRightOf="@+id/profile_image"
                        android:layout_marginLeft="21dp" />
                </RelativeLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Edit Information"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:paddingLeft="20dp"
                    android:id="@+id/button_edit_information"
                    android:textColor="?attr/colorPrimary"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_settings"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="?attr/colorPrimary"
                    android:paddingLeft="20dp"
                    android:textStyle="bold" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_common"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_format_list_bulleted"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/button_settings_common" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_notifications"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_bell"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_confidential"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_lock"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_account"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_account_box_outline"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_reset"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_sync"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_about"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="?attr/colorPrimary"
                    android:paddingLeft="20dp"
                    android:textStyle="bold" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_about_us"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_account_box_dark"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_write_author"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_email_open"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_text_exit"
                android:id="@+id/button_exit"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
