<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_cache"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorPrimaryDefault"
                    android:paddingLeft="20dp"
                    android:textStyle="bold" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_clear_cache"
                    android:gravity="left|center_vertical"
                    style="@style/ButtonThemeDefault"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/button_clear_cache_images"
                    android:onClick="buttonClearCacheImages"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_memory"
                    android:gravity="left|center_vertical"
                    style="@style/ButtonThemeDefault"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/button_display_size_application"
                    android:onClick="buttonDisplaySizeApplication" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>